[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Scripts/Lose2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Buttons/Restart001.PNG" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Restart002.PNG" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/Menu001.PNG" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/Menu002.PNG" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/Quit001.PNG" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Quit002.PNG" type="Texture" id=7]
[ext_resource path="res://Sprites/Youulose.png" type="Texture" id=8]
[ext_resource path="res://upsidedownwarn.png" type="Texture" id=9]

[node name="LoseLayout" type="CanvasLayer"]

[node name="Lose" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlackOverlay" type="ColorRect" parent="Lose"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.780392 )

[node name="PauseMenu" type="ColorRect" parent="Lose"]
margin_left = 202.0
margin_top = 86.0
margin_right = 782.0
margin_bottom = 482.0
color = Color( 0.168627, 0.164706, 0.164706, 1 )

[node name="ResetButton" type="TextureButton" parent="Lose/PauseMenu"]
margin_left = 166.279
margin_top = 232.299
margin_right = 391.279
margin_bottom = 301.299
rect_rotation = 180.0
rect_pivot_offset = Vector2( 111, 35 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="MenuButton" type="TextureButton" parent="Lose/PauseMenu"]
margin_left = 166.279
margin_top = 139.0
margin_right = 391.279
margin_bottom = 208.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 111, 35 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="QuitButton" type="TextureButton" parent="Lose/PauseMenu"]
margin_left = 166.279
margin_top = 47.0
margin_right = 391.279
margin_bottom = 116.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 111, 35 )
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Lose/PauseMenu"]
modulate = Color( 0.686275, 0.752941, 0.94902, 1 )
position = Vector2( 274.963, 351.112 )
scale = Vector2( 0.829788, 0.829788 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="Sprite2" type="Sprite" parent="Lose/PauseMenu"]
position = Vector2( 294.655, 21.7124 )
scale = Vector2( 0.568985, 0.568985 )
texture = ExtResource( 9 )
[connection signal="pressed" from="Lose/PauseMenu/ResetButton" to="Lose" method="_on_ResetButton_pressed"]
[connection signal="pressed" from="Lose/PauseMenu/MenuButton" to="Lose" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Lose/PauseMenu/QuitButton" to="Lose" method="_on_QuitButton_pressed"]
